style.css
:root{
    --color-primary: #0d6efd;
    --color-bg: #eee;
    font-family: system-ui, sans-serif;
}
*{
    box-sizing: border-box;
}
body{
    padding: 0;
    background-color: var(--color-bg);
    margin: 0;
    display: grid;
    min-height: 100dvh;
    grid-template-rows: auto 1fr auto;
}
header{
    padding: 1rem;
    color: white;
    background-color: var(--color-primary);
    display: flex;
    justify-content: space-between;
    align-items: center;
    h1{
        margin: 0;
    }
}
main{
    display: grid;
    position: relative;
    grid-template-columns: 1fr auto;

}
.left-side{
    padding: 1rem;
}
footer{
    background-color: white;
    padding: 1rem;
    text-align: center;
}

.button{
    text-decoration: none;
    font-weight: 700;
    color: var(--color-primary);
    text-align: center;
    align-content: center;
    font-size: 2rem;
    background: white;
    border-radius: 100vh;
    width: 2ch;
    border: none;
    aspect-ratio: 1;

}

#app{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-auto-rows: min-content;
    gap: 1em;
}

.book{
    background-color: white;
    padding: 1em;
    border-radius: 1em;
    corner-top-right-shape: invert;
    display: grid;
    gap: 8px;
    position: relative;
}
.book-title{
    font-weight: 600;
}

.delete{
    position: absolute;
    font-size: 12px;
    right: 4px;
    top: 4px;
    font-weight: 700;
    padding: 2px 6px;
    border-radius: 100vw;
    background-color: pink;
    color: white;
    transition: 0.5s;
    text-decoration: none;

}
.delete:hover{
    background-color: red;
    scale: 1.1;
}

.book-status.read{
    background: green;
}
.book-status{
    position: absolute;
    font-size: 14px;
    right: 0;
    bottom: 0;
    background: lightgray;
    color: white;
    padding: 1px 1em;
    border-radius: 1em 0 1em 0;
}

#addBookForm{
    background-color: white;
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 1.5em;
    width: min(40ch, 100%);
}
form input[type="text"], form input[type='number'], form input[type='submit'], form select{
    width: 100%;
    border-radius: 100vw;
    border: none;
    font-size: inherit;
    background-color: var(--color-bg);
    padding: 0.5em 1em;

}

